# platform-hardware-ril

./: Android.mk  CMakeLists.txt
include/telephony/: ril.h  ril_msim.h
libril/: Android.mk  CMakeLists.txt  RilSapSocket.cpp  RilSocket.cpp  ril.cpp  rilSocketQueue.h  ril_commands.h  ril_service.cpp  ril_unsol_commands.h
librilutils/: CMakeLists.txt
mocks/binder/: CMakeLists.txt  Parcel2.cpp  Parcel2.h
mocks/cutils/: CMakeLists.txt  properties2.c  ril_config.c  ril_config.h  sockets2.c  sockets2.h
mocks/utils/: Log2.h
reference-ril/: Android.mk  dsreference-ril.c  msimreference-ril.c  reference-ril.c
ril_fusion/include/telephony/: ril.h
ril_fusion/libril/: ril.cpp  ril_commands.h  ril_unsol_commands.h
ril_fusion/reference-ril/: reference-ril.c
rild/: Android.mk  CMakeLists.txt  rild.c
scripts/: rild.service  rild2.service
